--- a/Sheets.dcproj/project.wdgt/main.css
+++ b/Sheets.dcproj/project.wdgt/main.css
@@ -62,7 +62,7 @@ body {
     width: auto;
     background-image: url(Images/Form-Background-Large.png);
     background-repeat: repeat-x;
-    border-color: rgba(0, 0, 0, 0.433594);
+    border-color: rgba(0, 0, 0, 0.5);
     height: 96px;
     background-position: 50% 50%;
 }
@@ -77,23 +77,7 @@ body {
     margin-right: 0px;
     margin-bottom: 0px;
     width: auto;
-    border-color: rgba(0, 0, 0, 0.308594);
-}
-
-#explanation {
-    font-family: HelveticaNeue;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    position: absolute;
-    color: rgb(255, 255, 255);
-    font-size: 10pt;
-    text-align: left;
-    left: 22px;
-    top: 116px;
-    right: 22px;
-    width: auto;
-    bottom: 84px;
-    height: auto;
+    border-color: rgba(0, 0, 0, 0.5);
 }
 
 #stack {
@@ -225,7 +209,7 @@ body {
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 0px;
+    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
@@ -240,7 +224,7 @@ body {
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 0px;
+    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
@@ -276,7 +260,7 @@ body {
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 0px;
+    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
@@ -300,25 +284,6 @@ body {
     left: 10px;
     right: 10px;
     bottom: 48px;
-}
-
-#successText2 {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    position: absolute;
-    margin-top: 0px;
-    color: rgb(255, 255, 255);
-    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
-    text-align: center;
-    font-size: 10pt;
-    font-family: 'Helvetica Neue';
-    right: 0px;
-    width: 236px;
-    left: 10px;
-    top: 88px;
-    bottom: 46px;
-    height: auto;
-    visibility: hidden;
 }
 
 #update {
@@ -403,13 +368,12 @@ body {
     color: rgb(255, 255, 255);
     font-size: 10pt;
     text-align: left;
-    right: 12px;
-    width: 256px;
     left: 22px;
-    top: 156px;
-    min-height: 31px;
-    bottom: 53px;
-    height: auto;
+    margin-bottom: auto;
+    right: 78px;
+    width: auto;
+    top: 166px;
+    height: 30px;
 }
 
 #tile {
@@ -428,7 +392,7 @@ body {
     background-repeat: repeat-x;
     background-image: url(Images/formBackground%202.png);
     border-style: solid;
-    border-color: rgba(0, 0, 0, 0.421875);
+    border-color: rgba(0, 0, 0, 0.5);
     top: 136px;
     right: 0px;
     margin-left: auto;
@@ -451,7 +415,7 @@ body {
     background-repeat: repeat-x;
     background-image: url(Images/formBackground%202.png);
     border-style: solid;
-    border-color: rgba(0, 0, 0, 0.425781);
+    border-color: rgba(0, 0, 0, 0.5);
     top: 136px;
     right: 132px;
     margin-left: auto;
@@ -491,9 +455,10 @@ body {
     font-size: 11pt;
     font-family: 'Helvetica Neue';
     text-align: left;
-    top: 37px;
+    border-color: rgba(0, 0, 0, 0.5);
     margin-right: auto;
-    border-color: rgba(0, 0, 0, 0.429688);
+    margin-bottom: auto;
+    top: 38px;
     background-position: 50% 50%;
 }
 
@@ -505,30 +470,12 @@ body {
     color: rgb(255, 255, 255);
     font-size: 10pt;
     text-align: left;
-    right: 12px;
-    width: 256px;
     left: 22px;
-    min-height: 12px;
-    height: auto;
-    bottom: 200px;
+    height: 18px;
     top: 22px;
-}
-
-#customText {
-    font-family: HelveticaNeue;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    position: absolute;
-    color: rgb(255, 255, 255);
-    font-size: 10pt;
-    text-align: left;
-    right: 12px;
-    width: 256px;
-    min-height: 18px;
-    left: 22px;
-    top: 72px;
-    bottom: 150px;
-    height: auto;
+    margin-bottom: auto;
+    right: 22px;
+    width: auto;
 }
 
 #name {
@@ -549,8 +496,69 @@ body {
     font-size: 11pt;
     overflow: hidden;
     text-align: left;
-    top: 87px;
+    border-color: rgba(0, 0, 0, 0.5);
     margin-right: auto;
-    border-color: rgba(0, 0, 0, 0.425781);
+    margin-bottom: auto;
+    top: 88px;
     background-position: 50% 50%;
+}
+
+#img {
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    right: auto;
+    bottom: auto;
+    margin-top: 0px;
+    opacity: 0.5;
+    left: 3px;
+    top: 142px;
+}
+
+#img1 {
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    right: auto;
+    bottom: auto;
+    margin-top: 0px;
+    left: 136px;
+    opacity: 0.5;
+    top: 142px;
+}
+
+#successDetails {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    position: absolute;
+    margin-top: 0px;
+    color: rgb(255, 255, 255);
+    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
+    min-height: 0px;
+    font-weight: bold;
+    font-family: 'Helvetica Neue';
+    font-size: 10pt;
+    left: 0px;
+    text-align: center;
+    right: 0px;
+    width: auto;
+    bottom: 28px;
+    height: auto;
+    top: 98px;
+}
+
+#nameText {
+    font-family: HelveticaNeue;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    font-size: 10pt;
+    text-align: left;
+    left: 22px;
+    height: 18px;
+    margin-bottom: auto;
+    right: 22px;
+    width: auto;
+    top: 72px;
 }
