--- a/Sheets.dcproj/project/widget.wdgt/main.css
+++ b/Sheets.dcproj/project/widget.wdgt/main.css
@@ -417,7 +417,6 @@ body {
 }
 
 #type {
-    font-family: HelveticaNeue-Bold;
     position: absolute;
     font-size: 14px;
     color: rgb(255, 255, 255);
@@ -430,6 +429,7 @@ body {
     margin-bottom: auto;
     height: 25px;
     top: 90px;
+    font-family: 'Helvetica Neue';
 }
 
 #loc {
@@ -664,4 +664,45 @@ body {
     margin-bottom: auto;
     margin-right: auto;
     width: 124px;
+}
+
+#dropDetail {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    position: absolute;
+    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
+    font-size: 10pt;
+    font-family: 'Helvetica Neue';
+    color: rgb(128, 128, 128);
+    text-align: left;
+    left: 80px;
+    right: 0px;
+    width: auto;
+    height: 20px;
+    margin-top: auto;
+    bottom: 18px;
+}
+
+#image {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    right: auto;
+    bottom: auto;
+    margin-top: 0px;
+    top: 10px;
+    left: 10px;
+}
+
+#inner_image {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    top: 0px;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
