--- a/Sheets.dcproj/project/widget.wdgt/main.css
+++ b/Sheets.dcproj/project/widget.wdgt/main.css
@@ -114,15 +114,14 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    margin-top: 0px;
-    left: 22px;
     font-size: 8pt;
-    top: 208px;
-    right: 87px;
-    width: auto;
-    bottom: 20px;
-    height: auto;
     opacity: 0.5;
+    left: 20px;
+    margin-right: auto;
+    bottom: 20px;
+    margin-top: auto;
+    width: 200px;
+    height: 12px;
 }
 
 #drop {
@@ -131,7 +130,6 @@ body {
     position: absolute;
     font-size: 12pt;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
-    color: rgb(191, 191, 191);
     font-family: 'Helvetica Neue';
     height: 20px;
     left: 80px;
@@ -140,26 +138,26 @@ body {
     margin-bottom: auto;
     right: 0px;
     width: auto;
+    opacity: 0.75;
+    color: rgb(255, 255, 255);
 }
 
 #successText {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    margin-top: 0px;
     color: rgb(255, 255, 255);
     font-size: 12pt;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: center;
-    height: auto;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
     min-height: 28px;
-    top: 48px;
+    height: 40px;
+    left: 20px;
+    margin-bottom: auto;
     width: auto;
-    left: 10px;
-    right: 10px;
-    bottom: 48px;
+    right: 20px;
+    font-family: 'Helvetica Neue';
+    top: 30px;
 }
 
 #success {
@@ -187,45 +185,44 @@ body {
     font-size: 12pt;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: center;
-    height: auto;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
     min-height: 28px;
-    top: 48px;
     width: auto;
-    left: 10px;
-    right: 10px;
-    bottom: 48px;
+    top: 30px;
+    margin-bottom: auto;
+    left: 20px;
+    right: 20px;
+    height: 60px;
+    font-family: 'Helvetica Neue';
 }
 
 #successButton {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
     color: rgb(255, 255, 255);
-    height: 24px;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
+    height: 25px;
+    bottom: 0px;
+    font-family: 'Helvetica Neue';
 }
 
 #failButton {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
     color: rgb(255, 255, 255);
-    height: 24px;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
+    height: 25px;
+    bottom: 0px;
+    font-family: 'Helvetica Neue';
 }
 
 #div {
@@ -250,38 +247,36 @@ body {
 }
 
 #wrongButton {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
     color: rgb(255, 255, 255);
-    height: 24px;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 14px;
     left: 0px;
-    bottom: 2px;
     margin-top: auto;
     right: 0px;
     width: auto;
+    height: 25px;
+    bottom: 0px;
+    font-family: 'Helvetica Neue';
 }
 
 #wrongText {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    margin-top: 0px;
     color: rgb(255, 255, 255);
     font-size: 12pt;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: center;
-    height: auto;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
     min-height: 28px;
-    top: 48px;
+    font-family: 'Helvetica Neue';
+    left: 20px;
+    margin-bottom: auto;
     width: auto;
-    left: 10px;
-    right: 10px;
-    bottom: 48px;
+    right: 20px;
+    height: 60px;
+    top: 30px;
 }
 
 #update {
@@ -295,67 +290,66 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    margin-top: 0px;
     color: rgb(255, 255, 255);
     font-size: 12pt;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: center;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
-    left: 0px;
-    top: 48px;
-    right: 0px;
+    margin-bottom: auto;
     width: auto;
-    bottom: 98px;
-    height: auto;
+    height: 30px;
+    top: 30px;
+    font-family: 'Helvetica Neue';
+    left: 20px;
+    right: 20px;
 }
 
 #newVersion {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    margin-top: 0px;
     color: rgb(255, 255, 255);
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     min-height: 0px;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
     font-size: 10pt;
-    left: 0px;
     text-align: center;
-    top: 78px;
-    right: 0px;
+    font-family: 'Helvetica Neue';
+    height: 50px;
+    top: 60px;
+    margin-bottom: auto;
     width: auto;
-    bottom: 28px;
-    height: auto;
+    left: 20px;
+    right: 20px;
+    opacity: 0.5;
 }
 
 #skip {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
-    margin-top: 0px;
     font-size: 14px;
     color: rgb(255, 255, 255);
-    height: 24px;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     left: 0px;
-    top: 138px;
-    width: 124px;
+    height: 25px;
+    width: 125px;
+    margin-right: auto;
+    margin-top: auto;
+    bottom: 0px;
+    font-family: 'Helvetica Neue';
 }
 
 #download {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
-    margin-top: 0px;
     font-size: 14px;
     color: rgb(255, 255, 255);
-    height: 24px;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
-    top: 138px;
-    width: 124px;
-    left: 132px;
+    margin-top: auto;
+    margin-left: auto;
+    bottom: 0px;
+    right: 0px;
+    width: 125px;
+    height: 25px;
+    font-family: 'Helvetica Neue';
 }
 
 #iaian7com {
@@ -364,14 +358,17 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
     text-align: left;
-    left: 22px;
-    top: 176px;
-    margin-bottom: auto;
-    right: 78px;
-    width: auto;
-    height: 30px;
+    text-shadow: rgb(191, 191, 191) 0px 0px 0px;
+    font-size: 8pt;
+    opacity: 0.5;
+    width: 200px;
+    left: 20px;
+    line-height: 10px;
+    margin-right: auto;
+    margin-top: auto;
+    bottom: 30px;
+    height: 25px;
 }
 
 #tile {
@@ -383,16 +380,18 @@ body {
     border-top-right-radius: 5px 5px;
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
-    border-width: 1px;
     font-size: 13pt;
     width: 120px;
     border-style: solid;
     opacity: 0.5;
     background-color: rgb(13, 13, 13);
-    top: 111px;
     border-color: rgb(0, 0, 0);
+    border-width: 0px;
+    height: 20px;
     right: 0px;
     margin-left: auto;
+    bottom: 1px;
+    margin-top: auto;
 }
 
 #size {
@@ -404,16 +403,18 @@ body {
     border-top-right-radius: 5px 5px;
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
-    border-width: 1px;
     font-size: 13pt;
     width: 120px;
     border-style: solid;
     opacity: 0.5;
-    background-color: rgb(13, 13, 13);
-    top: 111px;
     border-color: rgb(0, 0, 0);
-    right: 136px;
+    border-width: 0px;
+    background-color: rgb(13, 13, 13);
+    height: 20px;
+    right: 0px;
     margin-left: auto;
+    bottom: 1px;
+    margin-top: auto;
 }
 
 #type {
@@ -440,20 +441,17 @@ body {
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
     border-width: 1px;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: url(Images/formBackground%202.png);
     border-style: solid;
-    left: 22px;
-    width: 252px;
-    font-size: 11pt;
     font-family: 'Helvetica Neue';
     text-align: left;
-    border-color: rgba(0, 0, 0, 0.496094);
-    margin-right: auto;
+    border-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.496094);
+    width: 156px;
+    right: 20px;
+    margin-left: auto;
+    top: 18px;
     margin-bottom: auto;
-    top: 38px;
-    background-position: 50% 50%;
-    background-repeat: repeat no-repeat;
+    font-size: 10pt;
 }
 
 #locationText {
@@ -464,12 +462,12 @@ body {
     color: rgb(255, 255, 255);
     font-size: 10pt;
     text-align: left;
-    left: 22px;
-    height: 18px;
+    left: 20px;
+    width: 90px;
+    height: 19px;
     top: 22px;
+    margin-right: auto;
     margin-bottom: auto;
-    right: 22px;
-    width: auto;
 }
 
 #img {
@@ -480,8 +478,8 @@ body {
     bottom: auto;
     margin-top: 0px;
     opacity: 0.5;
-    left: 3px;
-    top: 117px;
+    top: 28px;
+    left: 4px;
 }
 
 #img1 {
@@ -492,8 +490,8 @@ body {
     bottom: auto;
     margin-top: 0px;
     opacity: 0.5;
-    top: 117px;
-    left: 140px;
+    top: 28px;
+    left: 4px;
 }
 
 #successDetails {
@@ -504,16 +502,16 @@ body {
     color: rgb(255, 255, 255);
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     min-height: 0px;
-    font-weight: bold;
-    font-family: 'Helvetica Neue';
     font-size: 10pt;
-    left: 0px;
     text-align: center;
-    right: 0px;
     width: auto;
-    bottom: 28px;
-    height: auto;
-    top: 98px;
+    margin-bottom: auto;
+    left: 20px;
+    right: 20px;
+    top: 70px;
+    height: 50px;
+    font-family: 'Helvetica Neue';
+    opacity: 0.5;
 }
 
 #nameSprite {
@@ -525,20 +523,17 @@ body {
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
     border-width: 1px;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: url(Images/formBackground%202.png);
     border-style: solid;
-    left: 22px;
-    font-size: 11pt;
     overflow: hidden;
     text-align: left;
-    border-color: rgba(0, 0, 0, 0.496094);
-    margin-right: auto;
+    border-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.496094);
+    font-size: 10pt;
+    right: 20px;
+    margin-left: auto;
+    top: 93px;
     margin-bottom: auto;
-    top: 88px;
-    width: 120px;
-    background-position: 50% 50%;
-    background-repeat: repeat no-repeat;
+    width: 73px;
 }
 
 #nameFile {
@@ -550,20 +545,17 @@ body {
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
     border-width: 1px;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: url(Images/formBackground%202.png);
     border-style: solid;
-    font-size: 11pt;
     overflow: hidden;
     text-align: left;
-    border-color: rgba(0, 0, 0, 0.496094);
+    border-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.496094);
+    font-size: 10pt;
+    width: 73px;
+    left: 120px;
+    margin-right: auto;
+    top: 93px;
     margin-bottom: auto;
-    top: 88px;
-    right: 22px;
-    margin-left: auto;
-    width: 120px;
-    background-position: 50% 50%;
-    background-repeat: repeat no-repeat;
 }
 
 #nameFileText {
@@ -572,15 +564,15 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
-    text-align: left;
-    left: 22px;
-    height: 18px;
+    opacity: 0.5;
+    font-size: 8pt;
+    left: 120px;
+    width: 77px;
+    height: 12px;
+    text-align: center;
+    top: 114px;
+    margin-right: auto;
     margin-bottom: auto;
-    right: 22px;
-    top: 72px;
-    margin-left: auto;
-    width: 122px;
 }
 
 #nameSpriteText {
@@ -589,14 +581,15 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
-    text-align: left;
-    left: 22px;
-    height: 18px;
-    margin-bottom: auto;
-    top: 72px;
+    opacity: 0.5;
+    text-align: center;
+    font-size: 8pt;
+    width: 77px;
+    left: 203px;
+    height: 12px;
+    top: 114px;
     margin-right: auto;
-    width: 122px;
+    margin-bottom: auto;
 }
 
 #outputText {
@@ -607,12 +600,12 @@ body {
     color: rgb(255, 255, 255);
     font-size: 10pt;
     text-align: left;
-    height: 15px;
-    top: 122px;
+    height: 20px;
+    width: 95px;
+    left: 20px;
+    top: 72px;
+    margin-right: auto;
     margin-bottom: auto;
-    right: 22px;
-    margin-left: auto;
-    width: 122px;
 }
 
 #scale {
@@ -621,32 +614,30 @@ body {
     color: rgb(255, 255, 255);
     opacity: 1;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
-    height: 24px;
-    width: 124px;
-    top: 140px;
-    margin-right: auto;
-    margin-bottom: auto;
-    right: auto;
-    bottom: auto;
-    left: 22px;
     text-align: left;
     font-family: 'Helvetica Neue';
+    width: 160px;
+    left: 120px;
+    top: 45px;
+    margin-right: auto;
+    margin-bottom: auto;
+    height: 19px;
 }
 
 #output {
     position: absolute;
-    font-size: 14px;
     color: rgb(255, 255, 255);
     opacity: 1;
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
-    height: 24px;
-    width: 124px;
-    top: 140px;
-    left: 154px;
-    margin-right: auto;
-    margin-bottom: auto;
     text-align: left;
     font-family: 'Helvetica Neue';
+    width: 160px;
+    top: 70px;
+    right: 20px;
+    margin-left: auto;
+    margin-bottom: auto;
+    height: 19px;
+    font-size: 14px;
 }
 
 #scaleText {
@@ -657,13 +648,12 @@ body {
     color: rgb(255, 255, 255);
     font-size: 10pt;
     text-align: left;
-    right: 12px;
-    height: 15px;
-    left: 22px;
-    top: 122px;
-    margin-bottom: auto;
+    left: 20px;
+    height: 19px;
+    width: 95px;
+    top: 47px;
     margin-right: auto;
-    width: 124px;
+    margin-bottom: auto;
 }
 
 #dropDetail {
@@ -673,7 +663,6 @@ body {
     text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     font-size: 10pt;
     font-family: 'Helvetica Neue';
-    color: rgb(128, 128, 128);
     text-align: left;
     left: 80px;
     right: 0px;
@@ -681,6 +670,8 @@ body {
     height: 20px;
     margin-top: auto;
     bottom: 18px;
+    color: rgb(255, 255, 255);
+    opacity: 0.5;
 }
 
 #image {
@@ -705,4 +696,56 @@ body {
     max-height: 100%;
     width: auto;
     height: auto;
+}
+
+#sizeBox {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    position: absolute;
+    left: 0px;
+    height: 48px;
+    width: 123px;
+    bottom: 0px;
+    margin-top: auto;
+    margin-right: auto;
+    border-top-left-radius: 5px 5px;
+    border-top-right-radius: 5px 5px;
+    border-bottom-left-radius: 5px 5px;
+    border-bottom-right-radius: 5px 5px;
+    background-color: rgb(13, 13, 13);
+}
+
+#tileBox {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    position: absolute;
+    height: 48px;
+    width: 123px;
+    right: 0px;
+    margin-left: auto;
+    bottom: 0px;
+    margin-top: auto;
+    border-top-left-radius: 5px 5px;
+    border-top-right-radius: 5px 5px;
+    border-bottom-left-radius: 5px 5px;
+    border-bottom-right-radius: 5px 5px;
+    background-color: rgb(13, 13, 13);
+}
+
+#namingText {
+    font-family: HelveticaNeue;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    font-size: 10pt;
+    text-align: left;
+    height: 20px;
+    width: 95px;
+    left: 20px;
+    top: 97px;
+    margin-right: auto;
+    margin-bottom: auto;
 }
