--- a/Sheets.dcproj/project/widget.wdgt/main.css
+++ b/Sheets.dcproj/project/widget.wdgt/main.css
@@ -94,18 +94,18 @@ body {
 }
 
 #doneSave {
-    font-family: HelveticaNeue-Bold;
     text-align: center;
     position: absolute;
     color: rgb(255, 255, 255);
     height: 24px;
-    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     right: 20px;
     margin-left: auto;
     bottom: 20px;
     margin-top: auto;
     width: 55px;
     font-size: 14px;
+    font-family: 'Helvetica Neue';
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #text {
@@ -114,7 +114,6 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
     position: absolute;
-    font-size: 8pt;
     opacity: 0.5;
     left: 20px;
     margin-right: auto;
@@ -122,6 +121,8 @@ body {
     margin-top: auto;
     width: 200px;
     height: 12px;
+    font-size: 11px;
+    text-shadow: none;
 }
 
 #drop {
@@ -359,8 +360,6 @@ body {
     position: absolute;
     color: rgb(255, 255, 255);
     text-align: left;
-    text-shadow: rgb(191, 191, 191) 0px 0px 0px;
-    font-size: 8pt;
     opacity: 0.5;
     width: 200px;
     left: 20px;
@@ -369,6 +368,8 @@ body {
     margin-top: auto;
     bottom: 30px;
     height: 25px;
+    text-shadow: none;
+    font-size: 11px;
 }
 
 #tile {
@@ -451,7 +452,7 @@ body {
     margin-left: auto;
     top: 18px;
     margin-bottom: auto;
-    font-size: 10pt;
+    font-size: 14px;
 }
 
 #locationText {
@@ -460,14 +461,15 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
     text-align: left;
     left: 20px;
-    width: 90px;
-    height: 19px;
-    top: 22px;
+    font-size: 12px;
+    top: 23px;
     margin-right: auto;
     margin-bottom: auto;
+    width: 95px;
+    height: 18px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #img {
@@ -528,12 +530,12 @@ body {
     text-align: left;
     border-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.496094);
-    font-size: 10pt;
     right: 20px;
     margin-left: auto;
     top: 93px;
     margin-bottom: auto;
     width: 73px;
+    font-size: 14px;
 }
 
 #nameFile {
@@ -550,12 +552,12 @@ body {
     text-align: left;
     border-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.496094);
-    font-size: 10pt;
     width: 73px;
     left: 120px;
     margin-right: auto;
     top: 93px;
     margin-bottom: auto;
+    font-size: 14px;
 }
 
 #nameFileText {
@@ -565,7 +567,6 @@ body {
     position: absolute;
     color: rgb(255, 255, 255);
     opacity: 0.5;
-    font-size: 8pt;
     left: 120px;
     width: 77px;
     height: 12px;
@@ -573,6 +574,7 @@ body {
     top: 114px;
     margin-right: auto;
     margin-bottom: auto;
+    font-size: 11px;
 }
 
 #nameSpriteText {
@@ -583,13 +585,13 @@ body {
     color: rgb(255, 255, 255);
     opacity: 0.5;
     text-align: center;
-    font-size: 8pt;
     width: 77px;
     left: 203px;
     height: 12px;
     top: 114px;
     margin-right: auto;
     margin-bottom: auto;
+    font-size: 11px;
 }
 
 #outputText {
@@ -598,14 +600,15 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
     text-align: left;
-    height: 20px;
     width: 95px;
     left: 20px;
-    top: 72px;
+    font-size: 12px;
+    top: 73px;
     margin-right: auto;
     margin-bottom: auto;
+    height: 18px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #scale {
@@ -613,7 +616,6 @@ body {
     font-size: 14px;
     color: rgb(255, 255, 255);
     opacity: 1;
-    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: left;
     font-family: 'Helvetica Neue';
     width: 160px;
@@ -622,13 +624,13 @@ body {
     margin-right: auto;
     margin-bottom: auto;
     height: 19px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #output {
     position: absolute;
     color: rgb(255, 255, 255);
     opacity: 1;
-    text-shadow: rgb(0, 0, 0) 0px -1px 1px;
     text-align: left;
     font-family: 'Helvetica Neue';
     width: 160px;
@@ -638,6 +640,7 @@ body {
     margin-bottom: auto;
     height: 19px;
     font-size: 14px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #scaleText {
@@ -646,14 +649,15 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
     text-align: left;
     left: 20px;
-    height: 19px;
     width: 95px;
-    top: 47px;
+    font-size: 12px;
+    top: 48px;
     margin-right: auto;
     margin-bottom: auto;
+    height: 18px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
 
 #dropDetail {
@@ -740,12 +744,13 @@ body {
     overflow: hidden;
     position: absolute;
     color: rgb(255, 255, 255);
-    font-size: 10pt;
     text-align: left;
-    height: 20px;
     width: 95px;
     left: 20px;
-    top: 97px;
+    font-size: 12px;
+    top: 98px;
     margin-right: auto;
     margin-bottom: auto;
+    height: 18px;
+    text-shadow: rgb(0, 0, 0) 0px -1px 0px;
 }
